--- a/GateServer/packages.config
+++ b/GateServer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="boost" version="1.86.0" targetFramework="native" />
+  <package id="boost_filesystem-vc143" version="1.86.0" targetFramework="native" />
   <package id="JsonCpp.Windows" version="1.9.2" targetFramework="native" />
 </packages>
