--- a/GateServer/config.ini
+++ b/GateServer/config.ini
@@ -1,4 +1,10 @@
 [GateServer]
+host=127.0.0.1
 port=8080
 [VarifyServer]
+host=127.0.0.1
 port=50051
+[Redis]
+host=127.0.0.1
+port=6379
+pwd=666666
