--- a/GateServer/config.ini
+++ b/GateServer/config.ini
@@ -1,5 +1,5 @@
 [GateServer]
-host=127.0.0.1
+host=0.0.0.0
 port=8080
 [VarifyServer]
 host=127.0.0.1
@@ -8,3 +8,7 @@ port=50051
 host=127.0.0.1
 port=6379
 pwd=666666
+[MySql]
+host=127.0.0.1
+port=3306
+passwd=666666
