--- a/GateServer/GateServer.vcxproj.filters
+++ b/GateServer/GateServer.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="MySqlMgr.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="StatusGrpcClient.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -98,6 +101,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="MySqlMgr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="StatusGrpcClient.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
