--- a/GateServer/config.ini
+++ b/GateServer/config.ini
@@ -17,3 +17,14 @@ schema=llfc
 [StatusServer]
 host=127.0.0.1
 port=50052
+
+[ChatServers]
+name=ChatServer1,ChatServer2
+[ChatServer1]
+name=ChatServer1
+host=127.0.0.1
+port=8090
+[ChatServer2]
+name=ChatServer2
+host=127.0.0.1
+port=8091
