--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -18,12 +18,12 @@ schema=llfc
 host=127.0.0.1
 port=50052
 [ChatServers]
-name=ChatServer1,ChatServer2
-[ChatServer1]
-name=ChatServer1
+name=chatServer1,chatServer2
+[chatServer1]
+name=chatServer1
 host=127.0.0.1
 port=8090
-[ChatServer2]
-name=ChatServer2
+[chatServer2]
+name=chatServer2
 host=127.0.0.1
 port=8091
