--- a/ChatServer/config.ini
+++ b/ChatServer/config.ini
@@ -1,4 +1,4 @@
-﻿[GateServer]
+[GateServer]
 host=127.0.0.1
 port=8080
 [VarifyServer]
@@ -17,27 +17,14 @@ schema=llfc
 [StatusServer]
 host=127.0.0.1
 port=50052
-
-[ChatServers]
-name=ChatServer1,ChatServer2
-[ChatServer1]
-name=ChatServer1
-host=127.0.0.1
-port=8090
-[ChatServer2]
-name=ChatServer2
-host=127.0.0.1
-port=8091
-
 [PeerServer]
-Servers = chatserver2
+Servers=chatserver2
 [chatserver2]
-name = chatserver2
-host = 127.0.0.1
-port = 50056
-
+name=chatserver2
+host=127.0.0.1
+port=50056
 [SelfServer]
-name = chatserver1
-Host = 0.0.0.0
-port  = 8090
-RPCPort = 50055
+name=chatserver1
+host=0.0.0.0
+port=8090
+RPCPort=50055
