初步调试通过添加好友逻辑，通知待做

--- a/GateServer/config.ini
+++ b/GateServer/config.ini
@@ -19,12 +19,12 @@ host=127.0.0.1
 port=50052
 
 [ChatServers]
-name=ChatServer1,ChatServer2
-[ChatServer1]
-name=ChatServer1
+name=chatserver1,chatserver2
+[chatserver1]
+name=chatserver1
 host=127.0.0.1
 port=8090
-[ChatServer2]
-name=ChatServer2
+[chatserver2]
+name=chatserver2
 host=127.0.0.1
 port=8091
