--- a/ChatServer/config.ini
+++ b/ChatServer/config.ini
@@ -18,11 +18,16 @@ schema=llfc
 host=127.0.0.1
 port=50052
 [PeerServer]
-Servers=chatserver2
+Servers=chatserver2,chatserver1
 [chatserver2]
 name=chatserver2
 host=127.0.0.1
 port=50056
+[chatserver1]
+name=chatserver1
+host=127.0.0.1
+port=50055
+
 [SelfServer]
 name=chatserver1
 host=0.0.0.0
