--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -18,12 +18,12 @@ schema=llfc
 host=127.0.0.1
 port=50052
 [ChatServers]
-name=chatServer1,chatServer2
-[chatServer1]
-name=chatServer1
+name=chatserver1,chatserver2
+[chatserver1]
+name=chatserver1
 host=127.0.0.1
 port=8090
-[chatServer2]
-name=chatServer2
+[chatserver2]
+name=chatserver2
 host=127.0.0.1
 port=8091
